Quorum3/Library/Tests/TypeChecker/Pass/TextEqualsIgnoringCase.quorum
class Main
    action Main
        Text t 
        t:SetValue("heLlo")
        text p = "heLlo"

        output t:EqualsIgnoringCase("hello")
        output p:EqualsIgnoringCase("hello")
    end
end