Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerTextObjWrapped.quorum
class main
    action Main
        Text t
        t:setValue("t")
        integer i = t;
    end
end